--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,7 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,eclipse
 
 *.pyc
+
+
+# IntelliJ IDEA
+*.iml
