--- a/Gradle/JavaGradle/build.gradle
+++ b/Gradle/JavaGradle/build.gradle
@@ -40,6 +40,8 @@ task runAppAgain(type: JavaExec) {
     args(project.getProperty('num1'), 1);
   } else if (project.hasProperty("num2")){
     args(2, project.getProperty('num2'));
+  } else {
+    args(8, 8);
   }
 }
 
