--- a/Gradle/JavaGradle/build.gradle
+++ b/Gradle/JavaGradle/build.gradle
@@ -58,7 +58,40 @@ task runFraction(type: JavaExec) {
 // Try:
 // 1. Change Fraction.main so it accepts 2 arguments
 // 2. Create a new gradle tasks that accepts two arguments and 
-//    can be called as: gradle runFrac -Pdenom=4 -Pnum=3 or as gradle runFrac -Pnum=3 -Pdenom=4 , also make sure it can run with only 1 or no arguments
+//    can be called as: gradle runFrac -Pdenom=4 -Pnum=3 or as gradle runFrac -Pnum=3 -Pdenom=4 ,
+//    also make sure it can run with only 1 or no arguments
+
+// task that runs the Fraction Main which does not use arguments: gradle runFraction
+task runFrac(type: JavaExec) {
+  group 'Fraction Tasks'
+  description 'Tasks which runs Fraction with 2 or less arguments'
+
+  classpath = sourceSets.main.runtimeClasspath
+
+  main = 'Fraction'
+
+  // only works if two arguments are provided
+  // Try: using default values in case non or only one parameter is provided
+  if (project.hasProperty("num") && project.hasProperty("denom")) {
+    args(project.getProperty('num'), project.getProperty('denom'));
+  } else if (project.hasProperty("num")){
+    args(project.getProperty('num'), 10);
+  } else if (project.hasProperty("denom")){
+    args(1, project.getProperty('denom'));
+  } else {
+    args(8, 8);
+  }
+
+}
+
+
+
+
+
+
+
+
+
 
 // Example how you can add that libraries can be pulled from mavenCentral()
 // repositories {
