Add useful comments to repo example code

--- a/Threads/Synchronization/build.gradle
+++ b/Threads/Synchronization/build.gradle
@@ -5,14 +5,14 @@ application {
 }
 
 // gradle run -- runs with default
-// gradl run --args='5, 10000'  -- runs with 5 and 10 as values
+// gradle run --args='5, 10000'  -- runs with 5 and 10 as values
 run {
   // default arguments
   args '5' // number of transactions (threads)
   args '3000' // sleep delay
 }
 
-// gradle SynchExample2 --args='5,1000'. -- runs with two accounts and created 5 threads
+// gradle SynchExample2 --args='5 1000'. -- runs with two accounts and created 5 threads
 task SynchExample2(type: JavaExec) {
   classpath = sourceSets.main.runtimeClasspath
 
@@ -22,7 +22,7 @@ task SynchExample2(type: JavaExec) {
   args '40000' // sleep delay
 }
 
-// gradle SynchExample3 --args='5,1000'. -- runs with two accounts and created 5 threads
+// gradle SynchExample3 --args='5 1000'. -- runs with two accounts and created 5 threads
 task SynchExample3(type: JavaExec) {
   classpath = sourceSets.main.runtimeClasspath
 
